refactor(swagger): добавлено отображение защиты эндпоинтов через токен jwt
