# docs/swagger.json
@@ -1206,6 +1206,11 @@
         },
         "/api/registrar/call-next": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Находит первого пациента в очереди, меняет его статус на \"приглашен\" и присваивает номер окна",
                 "consumes": [
                     "application/json"
@@ -1441,6 +1446,11 @@
         },
         "/api/registrar/tickets/{id}/status": {
             "patch": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Изменяет статус тикета по ID",
                 "consumes": [
                     "application/json"
